# owntier

./: Cargo.toml  README.md  owntier-project-context.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/mikrotik_cmd/: mod.rs  subcmd.rs
cli/src/network_cmd/: mod.rs  subcmd.rs
docs/design/: runtime-and-architecture.md
lib/: Cargo.toml
lib/src/: lib.rs  network.rs  plugin.rs
mikrotik/: Cargo.toml
mikrotik/src/: api.rs  deploy.rs  lib.rs
